--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,2 +1,26 @@
-<h1>Products#index</h1>
-<p>Find me in app/views/products/index.html.erb</p>
+<div class="products-index-wrapper">
+  <div class="container">
+    <div class="row">
+      <%= form_tag(products_path, method: :get) do %>
+        <%= text_field_tag :search_name %>
+        <%= date_field_tag :search_date %>
+        <%= submit_tag "受注検索", :name => nil %>
+      <% end %>
+      <h2 class="text-center">受注一覧</h2>
+      <% if !@products.blank? %>
+        <% @products.each do |product| %>
+          <div class="col-md-6 col-md-offset-3 products-index-container">
+            <p>商品名：<%= link_to "#{product.name}", product_path(product.id), class:"" %>
+            <p>発注日：<p class=""><%= l(product.created_at, format: :nengappi) %></p>
+            <p>発注者：<%= link_to "#{Customer.find(product.customer_id).name}", customer_path(product.customer_id), class:"" %>
+          </div>
+        <% end %>
+        <div class="col-md-6 col-md-offset-3 text-center">
+        <%= link_to "CSV形式でダウンロード", products_path(format: :csv), class: "" %>
+      <% else %>
+        <p class="text-center">受注していません。</p>
+      <% end %>
+    </div>
+    </div>
+  </div>
+</div>
