--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,2 +1,34 @@
-<h1>Products#new</h1>
-<p>Find me in app/views/products/new.html.erb</p>
+<div class="products-new-wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3 products-new-container">
+        <h2 class="text-center">発注登録</h2>
+        <%= form_for @product do |f| %>
+          <!-- validateエラーメッセージを表示　暫定　☆ -->
+          <% if f.object.errors.any? %>
+            <div class="">
+              <ul>
+                <% f.object.errors.full_messages.each do |message| %>
+                  <li><%= message %></li>
+                <% end %>
+              </ul>
+            </div>
+          <% end %>
+          <div class="form-group">
+            <%= f.label :name, class: "" %>
+            <%= f.text_field :name, class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :number, class: "" %>
+            <%= f.number_field :number, min: 1, max:999, class: "form-control" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :description, class: "" %>
+            <%= f.text_field :description, class: "form-control" %>
+          </div>
+          <%= f.submit "発注", class: "btn btn-block active" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
