--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,4 @@
-<div class="products-show-wrapper"
+<div class="products-show-wrapper">
   <div class="container">
     <div class="row">
       <div class="col-md-offset-4 col-md-4 products-show-container">
