--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -14,9 +14,15 @@
               </ul>
             </div>
           <% end %>
+<!--
           <div class="form-group">
             <%= f.label :name, class: "" %>
             <%= f.text_field :name, class: "form-control" %>
+          </div>
+-->
+          <div class="form-group">
+            <%= f.label :name, class: "" %>
+            <%= f.collection_select :name, Item.all, :name, :name, class: "form-control" %>
           </div>
           <div class="form-group">
             <%= f.label :number, class: "" %>
